# MAI_OS

./: README.md
KP/: a.out  dag.ini  main.cpp
firstlab/: CMakeLists.txt  Makefile  first_child.cpp  main.cpp  second_child.cpp
lab2/: CMakeLists.txt  naive.c
lab3/: CMakeLists.txt  first_child.cpp  main.cpp  second_child.cpp
lab4/: CMakeLists.txt  compile.cpp  function.hpp  impl1.cpp  impl2.cpp  runtime.cpp
lab57/: CMakeLists.txt  child.cpp  main.cpp  mq.hpp  topology.hpp
lab8/: strace.txt
