
cmake_minimum_required (VERSION 3.22)
project(lab_os_5-7)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(PkgConfig)
pkg_check_modules(PC_ZeroMQ QUIET zmq)

find_path(ZeroMQ_INCLUDE_DIR
        NAMES zmq.hpp
        PATHS ${PC_ZeroMQ_INCLUDE_DIRS}
        )

find_library(ZeroMQ_LIBRARY
        NAMES zmq
        PATHS ${PC_ZeroMQ_LIBRARY_DIRS}
        )

add_executable(calculation child.cpp)
add_executable(main main.cpp)


target_include_directories(main PUBLIC ${ZeroMQ_INCLUDE_DIR})
target_link_libraries(main PUBLIC ${ZeroMQ_LIBRARY})

target_include_directories(calculation PUBLIC ${ZeroMQ_INCLUDE_DIR})
target_link_libraries(calculation PUBLIC ${ZeroMQ_LIBRARY})